# crowd_nav

./: CMakeLists.txt  README.md  package.xml
crowd_nav/: parser.py  publish_pedestrian_positions.py  rl_model.pth  test.py  test_2.py  test_2_2robot_real.py  test_2_2robots.py  test_2_2robots_hose.py  test_2_2robots_hose2.py  test_2_2robots_hose3.py  test_2_2robots_hose4.py  test_2_2robots_hose4_deploy.py  test_2_2robots_real2.py  test_2_jiu.py  train.py  train_2robots.py  train_2robots_hose.py  train_xin.py  train_xin2.py
crowd_nav/configs/: env.config  train.config
crowd_nav/msg/: PedestrainPositions.msg
crowd_nav/policy/: cadrl.py  cadrl_2robots.py  example.py  lstm_rl.py  multi_human_rl.py  multi_human_rl_2robots.py  multi_human_rl_2robots_hose.py  multi_human_rl_2robots_hose2.py  multi_human_rl_2robots_hose3.py  multi_human_rl_2robots_hose4.py  multi_human_rl_2robots_hose5.py  multi_human_rl_xin.py  multi_human_rl_xin2.py  policy_factory.py  sarl.py  sarl_2robots_hose.py  sarl_2robots_hose2.py  sarl_2robots_hose3.py  sarl_2robots_hose4.py  sarl_2robots_hose5.py  sarl_2robots_hose6.py  sarl_2robots_hose7.py  sarl_2robots_hose8.py  sarl_2robots_hose9.py  sarl_old.py  sarl_xin.py  sarl_xin2.py
crowd_nav/utils/: explorer.py  explorer_2robots.py  explorer_2robots_hose.py  explorer_2robots_hose3.py  explorer_2robots_hose4.py  explorer_2robots_hose5.py  explorer_2robots_hose6.py  explorer_xin.py  explorer_xin2.py  plot.py  plot2.py  plot_jiu.py  read_output.py  trainer_2robots.py  trainer_2robots_hose2.py  trainer_2robots_hose3.py
crowd_sim/envs/: crowd_sim.py  crowd_sim_2robots.py  crowd_sim_2robots_hose.py  crowd_sim_2robots_hose10.py  crowd_sim_2robots_hose11.py  crowd_sim_2robots_hose2.py  crowd_sim_2robots_hose3.py  crowd_sim_2robots_hose4.py  crowd_sim_2robots_hose5.py  crowd_sim_2robots_hose6.py  crowd_sim_2robots_hose7.py  crowd_sim_2robots_hose8.py  crowd_sim_2robots_hose9.py  crowd_sim_jiu.py  (+3 more)
launch/: demo.launch  deploy.launch  deploy.launch.xacro  deploy2.launch  our_model_node.launch  test_multi_master.launch
llm_decision/: api_key.txt  hybrid_llm_rl.py  llm_decision.py  llm_decision_initial.py  llm_decision_jiu0.py  llm_decision_jiu1.py  llm_decision_jiu2.py  llm_decision_jiu3.py  llm_decision_local.py  read_api_key.py  test_json_parsing.py
scripts/: upper_computer_node.py
zhang/: explorer_zhang.py  robot_zhang.py  sarl_zhang.py  state_zhang.py  test_zhang.py
(+124 files in other folders)
